# gemini-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MOCK_DATA.csv  SECURITY.md  flake.nix  h.html  readme.md  test.sh
src/: error.rs  format.rs  lib.rs  main.rs  schema.rs
src/cloud/: cloud.rs
src/content_gen/: content.rs  forgetful.rs  format.rs  memory.rs  memory_no.rs  memory_ok.rs  mod.rs  rag_search.rs
src/file/: bigfile.rs  file.rs  mod.rs
src/pulse/: format.rs  mod.rs  pulse.rs
src/tunemodel/: mode.rs
urls/: upload.txt
