[package]
name = "gemini-ai"
version = "0.1.1679"
edition = "2021"
authors = ["hariprasath"]
license = "MIT"
repository = "https://github.com/HashiramaSenjuhari/gemini-ai"
documentation = "https://docs.rs/gemini-ai"
homepage = "https://crates.io/crates/gemini-ai"
description = "A Rust based Gemini AI API, enabling access to advanced natural language processing and multimodal models."


keywords = ["gemini", "AI", "rag", "bard"]


[dependencies]
base64 = "0.22.1"
csv = "1.3.1"
dotenv = "0.15.0"
http-scrap = "0.1.1129"
regex = "1.11.1"
rusty-scrap = "0.1.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
native-tls = { version = "0.2.12", optional = true }
tokio = { version = "1.43.0", features = ["full"], optional = true }
async-std = { version = "1.13.0", optional = true }
anyhow = { version = "1.0.95", optional = true }
async-tls = { version = "0.13.0", optional = true }
chunked_transfer = "1.5.0"
httparse = "1.10.1"


[features]
default = ["sync"]
async = ["tokio", "anyhow", "async-std", "async-tls"]
sync = ["native-tls"]
